# flask-allows2

./: .coveragerc  AUTHORS  CHANGELOG  NOTICE  README.rst  pyproject.toml
docs/: Makefile  after_the_fact.rst  api.rst  conf.py  failure.rst  helpers.rst  index.rst  quickstart.rst  requirements.rst
src/flask_allows2/: __init__.py  allows.py  permission.py  requirements.py  views.py
test/: conftest.py  test_additional.py  test_allows.py  test_integration.py  test_override.py  test_permission.py  test_requirement.py  test_views.py
